--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="zh-CN" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
@@ -7,24 +7,24 @@
     <!-- ==========================================
          SEO & METADATA CONFIGURATION
          ========================================== -->
-    <title>AI 小破村 - 全球 AI 工具导航 (AI Scrapyard)</title>
-    <meta name="description" content="AI 小破村 (AI Scrapyard) - 收录全球与中国最优质的 AI 工具。ChatGPT, 文心一言, Midjourney, Stable Diffusion 等一站式导航。" />
-    <meta name="keywords" content="AI 小破村, AI导航, AI工具集, ChatGPT, 文心一言, Midjourney, 中国AI, 人工智能" />
-    <meta name="author" content="AI Scrapyard" />
+    <title>AI 小破村 (AI Nexus) - 全球 AI 工具精选目录</title>
+    <meta name="description" content="AI 小破村 (AI Nexus) - 收录全球与中国最优质的 AI 工具。一站式对比 ChatGPT, Claude, Midjourney, 文心一言, 通义千问等国内外顶尖模型。" />
+    <meta name="keywords" content="AI小破村, AI Nexus, AI导航, AI工具, ChatGPT, Midjourney, 人工智能, 大模型, 生成式AI, LLM" />
+    <meta name="author" content="AI Nexus" />
     <link rel="canonical" href="https://aixiaopocun.com" />
 
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://aixiaopocun.com" />
-    <meta property="og:title" content="AI 小破村 - 全球 AI 工具导航" />
-    <meta property="og:description" content="发现最好用的 AI 工具。一站式比较中国与全球的顶尖 AI 模型。" />
+    <meta property="og:title" content="AI 小破村 - 全球 AI 工具精选目录" />
+    <meta property="og:description" content="发现最好的 AI 工具。一站式对比国内外顶尖 AI 模型。" />
     <meta property="og:image" content="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f916.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://aixiaopocun.com" />
-    <meta property="twitter:title" content="AI 小破村 - 全球 AI 工具导航" />
-    <meta property="twitter:description" content="发现最好用的 AI 工具。一站式比较中国与全球的顶尖 AI 模型。" />
+    <meta property="twitter:title" content="AI 小破村 - 全球 AI 工具精选目录" />
+    <meta property="twitter:description" content="发现最好的 AI 工具。一站式对比国内外顶尖 AI 模型。" />
     <meta property="twitter:image" content="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f916.png" />
 
     <!-- Structured Data (JSON-LD) for Google Rich Results -->
@@ -32,9 +32,10 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "name": "AI 小破村",
+      "name": "AI Nexus",
+      "alternateName": "AI 小破村",
       "url": "https://aixiaopocun.com",
-      "description": "收录中国与全球的优质 AI 工具导航。",
+      "description": "A curated directory of the best AI tools from around the world.",
       "potentialAction": {
         "@type": "SearchAction",
         "target": "https://aixiaopocun.com/?q={search_term_string}",
@@ -60,8 +61,8 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="AI 小破村" />
-    <meta name="theme-color" content="#0f172a" />
+    <meta name="apple-mobile-web-app-title" content="AI Nexus" />
+    <meta name="theme-color" content="#030712" />
     <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f916.png" />
 
     <script src="https://cdn.tailwindcss.com"></script>
