add research info

--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <!-- ==========================================
          SEO & METADATA CONFIGURATION
          ========================================== -->
-    <title>AI 小破村 (AI Nexus) - 全球 AI 工具精选目录</title>
-    <meta name="description" content="AI 小破村 (AI Nexus) - 收录全球与中国最优质的 AI 工具。一站式对比 ChatGPT, Claude, Midjourney, 文心一言, 通义千问等国内外顶尖模型。" />
-    <meta name="keywords" content="AI小破村, AI Nexus, AI导航, AI工具, ChatGPT, Midjourney, 人工智能, 大模型, 生成式AI, LLM" />
+    <title>AI 小破村 (AI Nexus) - 全球 AI 工具精选目录 | AI 黄页与导航</title>
+    <meta name="description" content="AI 小破村 (AI Nexus) 是专为中国用户打造的 AI 工具黄页与导航站。收录全球与中国最优质的 AI 工具，一站式对比 ChatGPT, Claude, Midjourney, 文心一言, Kimi, 通义千问等国内外顶尖大模型。发现免费 AI 工具、AIGC 教程与效率神器。" />
+    <meta name="keywords" content="AI小破村, AI黄页, AI导航, AI工具集, 人工智能, ChatGPT, Midjourney, 文心一言, Kimi, 通义千问, 免费AI工具, AI绘画, AI写作, 大模型, 生成式AI, AIGC, LLM, 国产AI, AI教程" />
     <meta name="author" content="AI Nexus" />
     <link rel="canonical" href="https://aixiaopocun.com" />
 
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://aixiaopocun.com" />
-    <meta property="og:title" content="AI 小破村 - 全球 AI 工具精选目录" />
-    <meta property="og:description" content="发现最好的 AI 工具。一站式对比国内外顶尖 AI 模型。" />
+    <meta property="og:title" content="AI 小破村 - 全球 AI 工具精选黄页" />
+    <meta property="og:description" content="发现最好的 AI 工具。一站式对比 ChatGPT, Kimi, Midjourney 等国内外顶尖 AI 模型。" />
     <meta property="og:image" content="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f916.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://aixiaopocun.com" />
-    <meta property="twitter:title" content="AI 小破村 - 全球 AI 工具精选目录" />
-    <meta property="twitter:description" content="发现最好的 AI 工具。一站式对比国内外顶尖 AI 模型。" />
+    <meta property="twitter:title" content="AI 小破村 - 全球 AI 工具精选黄页" />
+    <meta property="twitter:description" content="发现最好的 AI 工具。一站式对比 ChatGPT, Kimi, Midjourney 等国内外顶尖 AI 模型。" />
     <meta property="twitter:image" content="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f916.png" />
 
     <!-- Structured Data (JSON-LD) for Google Rich Results -->
@@ -32,10 +32,10 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "name": "AI Nexus",
-      "alternateName": "AI 小破村",
+      "name": "AI 小破村",
+      "alternateName": ["AI Nexus", "AI Xiao Po Cun", "AI Scrapyard"],
       "url": "https://aixiaopocun.com",
-      "description": "A curated directory of the best AI tools from around the world.",
+      "description": "A curated directory of the best AI tools from around the world, tailored for Chinese users.",
       "potentialAction": {
         "@type": "SearchAction",
         "target": "https://aixiaopocun.com/?q={search_term_string}",
@@ -61,7 +61,7 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="AI Nexus" />
+    <meta name="apple-mobile-web-app-title" content="AI 小破村" />
     <meta name="theme-color" content="#030712" />
     <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f916.png" />
 
